[package]
name = "journey-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets"]}
color-eyre = "0.6"
crossterm = "0.28.1"
solana-sdk = "1.16"
solana-client = "1.16"
bip39 = { version = "2.1.0" , features = ["rand","rand_core", "unicode-normalization"]}
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }

